updated loc keys for estated disatisfaction change

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -27,25 +27,46 @@
  br_hre_small_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_revolutulionary_tension_value')|+=]."
  br_hre_medium_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_revolutulionary_tension_value')|+=]."
  br_hre_large_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_revolutulionary_tension_value')|+=]."
- br_hre_unspecified_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ unspecified amount: $br_revolution_progress_change_value$."
+ br_hre_unspecified_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$: $br_revolution_progress_change_value$."
+
  ##Change in estate disatisfaction tt
  br_disatisfaction_change_value: "[SCOPE.GetLocalVariable('br_change_in_disatisfaction_var').GetValue|+-]"
  #br_basic_estate_disatisfaction_increases_loc: "[GetPlayer.GetCustom('br_estate_with_increasing_disatisfaction_loc')] disatisfaction increased with a"
  #br_increase_in_estate_disatisfaction_tt: "[SCOPE.GetLocalVariable('br_quantitative_indicator_var').GetName] $br_basic_estate_disatisfaction_increases_loc$ [GetPlayer.GetCustom('br_quantitative_indicator_loc')] amount"
- br_basic_estate_disatisfaction_increases_loc: "disatisfaction increased with a"
- br_hre_small_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_medium_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_large_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_small_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_medium_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_large_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_small_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_medium_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
- br_hre_large_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
- br_basic_estate_disatisfaction_change_loc: "disatisfaction changed with a"
- br_hre_unspecified_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_change_loc$ unspecified amount: $br_disatisfaction_change_value$."
- br_hre_unspecified_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_change_loc$ unspecified amount: $br_disatisfaction_change_value$."
- br_hre_unspecified_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_change_loc$ unspecified amount: $br_disatisfaction_change_value$."
+ br_basic_estate_disatisfaction_change_loc: "disatisfaction changed with"
+ #estate disatisfaction decrease
+ br_basic_estate_disatisfaction_increases_loc: "disatisfaction increased with"
+ br_basic_specifed_estate_disatisfaction_increase_loc: "$br_basic_estate_disatisfaction_increases_loc$ a"
+ br_basic_unspecifed_estate_disatisfaction_increase_loc: "$br_basic_estate_disatisfaction_increases_loc$"
+ br_hre_small_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_small_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_small_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_increase_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_unspecified_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_increase_loc$: $br_disatisfaction_change_value$."
+ #estate disatisfaction decrease
+ br_basic_estate_disatisfaction_decreases_loc: "disatisfaction decreased with"
+ br_basic_specifed_estate_disatisfaction_decrease_loc: "$br_basic_estate_disatisfaction_decreases_loc$ a"
+ br_basic_unspecifed_estate_disatisfaction_decrease_loc: "$br_basic_estate_disatisfaction_decreases_loc$"
+ br_hre_small_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_small_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_small_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_specifed_estate_disatisfaction_decrease_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_decrease_in_estate_disatisfaction_value')|+=]."
+ br_hre_unspecified_decrease_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_decrease_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
+ br_hre_unspecified_decrease_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_unspecifed_estate_disatisfaction_decrease_loc$: $br_disatisfaction_change_value$."
+
 
  ##Monarchy popularity
  br_will_increase_monthly_monarchy_popularity_tt: "This will increase the monthly monarchy popularity."
