updated monarchy popularity change script value

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -16,11 +16,11 @@
  br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_threshold_percentage')]%#! of the population are loyalists."
  br_impending_revolution_monarchy_popularity_revolution_progress_change_loc: "from the current Monarchy popularity."
 
- #br_quantitative_indicator_loc
- br_small_loc: "small"
- br_medium_loc: "medium"
- br_large_loc: "large"
- br_unspecified_loc: "unspecified"
+#  #br_quantitative_indicator_loc
+#  br_small_loc: "small"
+#  br_medium_loc: "medium"
+#  br_large_loc: "large"
+#  br_unspecified_loc: "unspecified"
  ##Change in progress tt
  br_revolution_progress_change_value: "[SCOPE.GetLocalVariable('br_change_in_revolution_progress_var').GetValue|+-]"
  #revolution progress increase
@@ -83,6 +83,9 @@
  br_will_increase_monthly_monarchy_popularity_tt: "This will increase the monthly monarchy popularity."
 
  ##Script value breakdowns
+ br_revolution_from_statue_of_ruler_loc: "From having [GetStaticModifier('modifier_statue_of_ruler').GetName]"
+ br_revolution_from_antiquated_regime_loc: "From having [GetStaticModifier('br_modifier_antiquated_regime').GetName]"
+ #temp grefm loc
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
  grefm_value_from_completed_legacies: "From completed #bold Ottoman Legacy#! [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  grefm_value_from_turkeater_unleashed: "From #bold Releasing #greece Nikitaras#!#!"
