--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
  #general localization for journal entries
- if_journal_timeout_tt: "if the journals time runs out."
+ if_journal_timeout_tt: "If the journals time runs out."
 
 
  #journal entries
