added remove noble priveliges button to reform JE
-added remove noble privilege's button to reform JE
-added monthly change in estate dissatisfaction based on the law you have enacted for the feudalism social hierarchy

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -16,6 +16,12 @@
  br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_threshold_percentage')]%#! of the population are loyalists."
  br_impending_revolution_monarchy_popularity_revolution_progress_change_loc: "from the current Monarchy popularity."
 
+ br_impending_revolution_has_feudalism_enforced_loc: "has enacted [GetLawType('br_law_feudalism_enforced').GetName]."
+ br_impending_revolution_has_feudalism_codified_loc: "has enacted [GetLawType('br_law_feudalism_codified').GetName]."
+ br_impending_revolution_has_feudalism_not_enforced_loc: "has enacted [GetLawType('br_law_feudalism_not_enforced').GetName]."
+ br_impending_revolution_has_feudalism_affirmative_action_loc: "has enacted [GetLawType('br_law_feudalism_affirmative_action').GetName]."
+
+
 #  #br_quantitative_indicator_loc
 #  br_small_loc: "small"
 #  br_medium_loc: "medium"
