--- a/localization/english/br_social_hierarchy_l_english.yml
+++ b/localization/english/br_social_hierarchy_l_english.yml
@@ -31,6 +31,12 @@
  br_law_feudalism_affirmative_action: "Affirmative Action"
  br_law_feudalism_affirmative_action_desc: "Active measures to create an equitable socioeconomic situation, prioritizing previously marginalized groups."
 
+ #feudalism laws modifiers
+ country_enactment_success_chance_br_law_feudalism_not_enforced_add: "[concept_enactment_success] chance for [GetLawType('br_law_feudalism_not_enforced').GetName]"
+ country_enactment_success_chance_br_law_feudalism_not_enforced_add_desc: "A flat percentage point increase to the likelihood of enacting the specific law"
+ country_enactment_success_chance_br_law_feudalism_affirmative_action_add: "[concept_enactment_success] chance for [GetLawType('br_law_feudalism_affirmative_action').GetName]"
+ country_enactment_success_chance_br_law_feudalism_affirmative_action_add_desc: "A flat percentage point increase to the likelihood of enacting the specific law"
+
  #br_feudalism_political_movement_pop_support
  br_pop_is_of_1de_estate_loc: "The pop is of the 1de estate:"
  br_pop_is_of_2de_estate_loc: "The pop is of the 2de estate:"
