updated food security has stabilized event

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -259,6 +259,12 @@
  hre_revolution_events.207.a: "The Revolution has begun."
  br_revolution_errupts_warning_tt: "#r From now on the Revolution has errupted and you will have to manage the stability of the revolution thru a new Journal Entry.#!"
 
+ #Food security has stabilized
+ hre_revolution_events.501.t: "Food security has stabilized"
+ hre_revolution_events.501.d: "Food security has stabilized"
+ hre_revolution_events.501.f: "Food security has stabilized"
+ hre_revolution_events.501.a: "Great"
+
  ##Modifiers
  br_modifier_unreliable_food_security: "Unreliable Food Security"
  br_modifier_unpopular_regime: "Unpopular Regime"
