added a HRE objective
-added a HRE objective
-Still need to add loc

--- a/localization/english/br_objectives_l_english.yml
+++ b/localization/english/br_objectives_l_english.yml
@@ -44,3 +44,6 @@
  objective_egalitarian_society_desc_br_australis:0 "#lore $br_australis_FLAVOR_TEXT$#!"
  objective_egalitarian_society_name_NAH:0 "#v $NAH$#!"
  objective_egalitarian_society_desc_NAH:0 "#lore $NAH_FLAVOR_TEXT$#!"
+
+ br_hre_objective: "Holy Roman Empire"
+ br_hre_objective_desc: "TODO"
