added a objective for the ERE

--- a/localization/english/br_objectives_l_english.yml
+++ b/localization/english/br_objectives_l_english.yml
@@ -47,3 +47,6 @@
 
  br_hre_objective: "Holy Roman Empire"
  br_hre_objective_desc: "TODO"
+
+ br_ere_objective: "Eastern Roman Empire"
+ br_ere_objective_desc: "TODO"
