added an event to popularize the regime

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -264,6 +264,11 @@
  hre_revolution_events.501.d: "Food security has stabilized"
  hre_revolution_events.501.f: "Food security has stabilized"
  hre_revolution_events.501.a: "Great"
+ #Food security has stabilized
+ hre_revolution_events.502.t: "Popular Regime"
+ hre_revolution_events.502.d: "Our regime is now popular."
+ hre_revolution_events.502.f: "Due to the popularity of our monarch our regime is no longer considered unpopular."
+ hre_revolution_events.502.a: "Great"
 
  ##Modifiers
  br_modifier_unreliable_food_security: "Unreliable Food Security"
